--- a/configuration/debug.yaml
+++ b/configuration/debug.yaml
@@ -3,4 +3,4 @@
   become: yes
   tasks:
   - name: printing message
-    ansible.builtin.shell: echo welcome to ansible.cfg >> /tmp/rakesh
+    ansible.builtin.shell: echo welcome to ansible.cfg > /tmp/rakesh
